Added html files

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -3,9 +3,22 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>Jesse's Personal Site</title>
 </head>
 <body>
- <h1>Jesse Mucheke</h1> 
+ <img src="images/jesse-mucheke-profile-pic-modified.png" alt="Jesse profile picture">
+ <h1>Jesse Mucheke</h1>
+ <p><em>Full Stack Developer</em></p>
+ <p>I am website developer experienced in working on both the  <strong> <a href="#">Frontend and Backend</a></strong> of a website. I use <strong>javascript, Angular </strong>and <strong>NodeJS</strong></p>
+ <hr>
+ <h3>Education</h3>
+ <ul>
+  <li>Dedan Kimathi University of Technology</li>
+  <li>Maai Mahiu Boy's High School</li>
+  <li>Maai Mahiu Primary School</li>
+ </ul>
+ <h3><a href="hobbies.html">Hobbies</a></h3>
+ <h3><a href="contact.html">Contact me</a></h3>
+
 </body>
 </html>
