Added encoding tyoe in the html tags

--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -20,18 +20,17 @@
 
  <hr>
 
- <form action="post">
+ <form action="mailto:jmucheke274@gmail.com" method="post" enctype="text/plain">
   <label for="name">Your Name: </label>
   <input placeholder="John Doe" name="name" type="text"><br>
   <label for="email">Your Email: </label>
   <input placeholder="example@gmail.com" name="email" type="email"><br>
   <label for="message">Your Message: </label>  <br>
-  <textarea
-   name="message" placeholder="Hey there!" id="message" cols="30" rows="10"></textarea><br>
+  <textarea name="message" placeholder="Hey there!" id="message" cols="30" rows="10">
+  </textarea><br>
 
-   <input type="submit" name="submit" id="submit">
-   <input type="range" value="70">
+   <input type="submit" id="submit">
  </form>
 </body>
 
-</html>
+</html> 
