Working with inline css

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -1,96 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Jesse's Personal Site</title>
-</head>
-<body>
- 
 
- <table cellspacing="20">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jesse's Personal Site</title>
+
+  <style>
+    body {
+      background-color: #EAF6F6;
+    }
+
+    hr {
+      color: grey;
+      border-style: dotted none none;
+      width: 5%;
+      border-width: 5px;
+    }
+  </style>
+</head>
+
+
+<table cellspacing="20">
   <tbody>
-   <tr>
-    <td><img src="images/jesse-mucheke-profile-pic-modified.png" alt="Jesse profile picture"></td>
-    <td><h1>Jesse Mucheke</h1>
-     <p><em>Full Stack Developer</em></p>
-     <p>I am website developer experienced in working on both the <strong> <a href="#">Frontend and Backend</a></strong> of a
-      website. I use <strong>javascript, Angular </strong>and <strong>NodeJS</strong></p>
-    </td>
-   </tr>
+    <tr>
+      <td><img src="images/jesse-mucheke-profile-pic-modified.png" alt="Jesse profile picture"></td>
+      <td>
+        <h1>Jesse Mucheke</h1>
+        <p><em>Full Stack Developer</em></p>
+        <p>I am website developer experienced in working on both the <strong> <a href="#">Frontend and
+              Backend</a></strong> of a
+          website. I use <strong>javascript, Angular </strong>and <strong>NodeJS</strong></p>
+      </td>
+    </tr>
   </tbody>
- </table>
- 
- 
- <hr>
- <h3>Education</h3>
- <ul>
+</table>
+
+
+<hr>
+<h3>Education</h3>
+<ul>
   <li>Dedan Kimathi University of Technology</li>
   <li>Maai Mahiu Boy's High School</li>
   <li>Maai Mahiu Primary School</li>
- </ul>
+</ul>
 
- <hr>
+<hr>
 
- <h3>Work Experience</h3>
+<h3>Work Experience</h3>
 
- <table cellspacing="10">
+<table cellspacing="10">
 
   <thead>
-   <tr>
-    <th>Dates</th>
-    <th>Work</th>
-   </tr>
-   
+    <tr>
+      <th>Dates</th>
+      <th>Work</th>
+    </tr>
+
   </thead>
 
   <tbody>
-   <tr>
-    <td>Jan 2022- April 2022</td>
-    <td>Network Technician at AgapeTech Solutions</td>
-   </tr>
-   
-   <tr>
-    <td>2023</td>
-    <td>Full Stack Developer at The Jitu</td>
-   </tr>
+    <tr>
+      <td>Jan 2022- April 2022</td>
+      <td>Network Technician at AgapeTech Solutions</td>
+    </tr>
+
+    <tr>
+      <td>2023</td>
+      <td>Full Stack Developer at The Jitu</td>
+    </tr>
   </tbody>
   <tfoot></tfoot>
-  
- </table>
 
- <hr>
+</table>
+
+<hr>
 
 
- <h3>Skills</h3>
+<h3>Skills</h3>
 
- <table cellspacing="10">
+<table cellspacing="10">
   <tbody>
-   <tr>
-    <td>HTML5</td>
-    <td>⭐⭐⭐⭐⭐</td>
-   </tr>
-   <tr>
-    <td>CSS</td>
-    <td>⭐⭐⭐⭐⭐</td>
-   </tr>
-   <tr>
-    <td>javascript</td>
-    <td>⭐⭐⭐⭐⭐</td>
-   </tr>
- 
-   </tr>
+    <tr>
+      <td>HTML5</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>javascript</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+
+    </tr>
   </tbody>
- </table>
-
- 
+</table>
 
 
- <hr>
 
 
- <h3><a href="hobbies.html">Hobbies</a></h3>
- <h3><a href="contact.html">Contact me</a></h3>
+<hr>
+
+
+<h3><a href="hobbies.html">Hobbies</a></h3>
+<h3><a href="contact.html">Contact me</a></h3>
 
 </body>
+
 </html>
