--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,18 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jesse's Personal Site</title>
 
-  <style>
-    body {
-      background-color: #EAF6F6;
-    }
-
-    hr {
-      color: grey;
-      border-style: dotted none none;
-      width: 5%;
-      border-width: 5px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 
