--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,14 @@
  <link rel="stylesheet" href="css/styles.css">
  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
- 
+ <div>
+  <h1>I'm Jesse.</h1>
+  <p>a Software Engineer</p>
+ </div>
+
+
 </body>
+
 </html>
