Worked on css dispay property

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
- <div>
+ <div class="top-container">
+  <img src="images/cloud.png" alt="cloud">
   <h1>I'm Jesse.</h1>
-  <p>a Software Engineer</p>
+  <p>a <span class="soft">Software</span>  Engineer</p>
+  <img src="images/cloud.png" alt="cloud">
+  <img src="images/mountain.png" alt="mountain">
  </div>
+ <div class="middle-container"></div>
+ <div class="bottom-container"></div>
 
 
 </body>
