--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -7,14 +7,19 @@
  <title>Jesse Mucheke</title>
  <link rel="stylesheet" href="css/styles.css">
  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link
+  href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@400;500;800&family=Sacramento&display=swap"
+  rel="stylesheet">
 </head>
 
 <body>
  <div class="top-container">
-  <img src="images/cloud.png" alt="cloud">
+  <img class="top-cloud" src="images/cloud.png" alt="cloud">
   <h1>I'm Jesse.</h1>
   <p>a <span class="soft">Software</span>  Engineer</p>
-  <img src="images/cloud.png" alt="cloud">
+  <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
   <img src="images/mountain.png" alt="mountain">
  </div>
  <div class="middle-container"></div>
