--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -18,12 +18,51 @@
  <div class="top-container">
   <img class="top-cloud" src="images/cloud.png" alt="cloud">
   <h1>I'm Jesse.</h1>
-  <p>a <span class="soft">Software</span>  Engineer</p>
+  <h2>a <span class="soft">Software</span>  Engineer</h2>
   <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
   <img src="images/mountain.png" alt="mountain">
  </div>
- <div class="middle-container"></div>
- <div class="bottom-container"></div>
+ <div class="middle-container">
+  <div class="profile">
+   <img src="images/jesse-mucheke-profile-pic-modified.png" alt="profile_pic">
+   <h2>Hello.</h2>
+   <p>I am Fullstack web developer experienced in working on both the Frontend and
+      Backend of a
+    website. I use javascript, Angular and NodeJS</p>
+  </div>
+  <hr>
+  <div class="skills">
+   <h2>My Skills.</h2>
+   <div class="skill-row">
+    <img class="" src="influence.png" alt="computer">
+    <h3>Lorem & Ipsum</h3>
+    <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat
+     ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+   </div>
+   <div class="skill-row">
+    <img class="" src="images/chillies.png" alt="chillies">
+    <h3>Lorem Ipsum Dolor</h3>
+    <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur
+     wisi, quisque vel eu, rutrum nam.</p>
+   </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+   <h2>Get In Touch</h2>
+   <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+   <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+   <a class="btn" href="mailto:jmucheke274@email.com">CONTACT ME</a>
+  </div>
+ </div>
+ 
+ 
+ <div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/">Twitter</a>
+  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <p>© 2024 Jesse Mucheke.</p>
+ </div>
+
 
 
 </body>
