Finished on the webpage css

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -22,36 +22,41 @@
   <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
   <img src="images/mountain.png" alt="mountain">
  </div>
+
  <div class="middle-container">
   <div class="profile">
    <img src="images/jesse-mucheke-profile-pic-modified.png" alt="profile_pic">
+   
    <h2>Hello.</h2>
-   <p>I am Fullstack web developer experienced in working on both the Frontend and
+   <p class="intro">I am Fullstack web developer experienced in working on both the Frontend and
       Backend of a
-    website. I use javascript, Angular and NodeJS</p>
+    website. I am also a Machine learning enthusiast.</p>
   </div>
   <hr>
   <div class="skills">
    <h2>My Skills.</h2>
    <div class="skill-row">
-    <img class="" src="influence.png" alt="computer">
-    <h3>Lorem & Ipsum</h3>
-    <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat
-     ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+    <!-- <img class="" src="https://media.giphy.com/media/qgQUggAC3Pfv687qPC/giphy.gif" alt="computer"> -->
+    <img class="code-img" src="https://media.giphy.com/media/aEwLTJvYxwo1L09oyP/giphy.gif" alt="code-img">
+   
+    <h3>Full Stack Development</h3>
+    <p>I have worked with both frontend and backend technologies to deliver optimal business solutions. I have gained valuable
+    insights while designing and developing web applications.</p>
    </div>
    <div class="skill-row">
-    <img class="" src="images/chillies.png" alt="chillies">
-    <h3>Lorem Ipsum Dolor</h3>
-    <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur
-     wisi, quisque vel eu, rutrum nam.</p>
+    <img class="chilli-img" src="https://media.giphy.com/media/kPrlykW2TpVU4HWx2O/giphy.gif" alt="chillies">
+    <h3>Database Design and implementation</h3>
+    <p >I have experience working with both structured and unstructured database designs, contributing to the delivery of
+    comprehensive database designs and their implementation.</p>
    </div>
   </div>
-  <hr>
+  <hr> 
   <div class="contact-me">
    <h2>Get In Touch</h2>
-   <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-   <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-   <a class="btn" href="mailto:jmucheke274@email.com">CONTACT ME</a>
+   <h3>Are you interested in hiring a versatile developer?</h3>
+   <p class="contact-me-message">I can create a state-of-the-art application tailored to meet your business requirements. Let's discuss how we can
+   achieve that and elevate your business to the next level!</p>
+   <a class="contact-me-btn" href="mailto:jmucheke274@email.com">CONTACT ME</a>
   </div>
  </div>
  
